fix layout issue: userprofile, slider bar color in mymap, sidebar menu align

--- a/src/components/MyMap/AoSurvey/styles.scss
+++ b/src/components/MyMap/AoSurvey/styles.scss
@@ -9,7 +9,7 @@
   }
 
   div {
-    background-color: #fff !important;
+    background-color: #fff;
   }
 
   
