--- a/src/containers/Sidebar/styles.scss
+++ b/src/containers/Sidebar/styles.scss
@@ -42,6 +42,9 @@
         align-items: center;
         justify-content: center;
         width: 150px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
 
         .icon {
           display: inline-block;
